--- a/boat/templates/boat/order_form.html
+++ b/boat/templates/boat/order_form.html
@@ -1,4 +1,4 @@
-{% extends 'boat/base.html'%}
+{% extends 'catalog/base.html'%}
 {% block content %}
 
 
@@ -7,16 +7,13 @@
     <div class="col-lg-12 col-md-6 col-sm-12">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">Создание заявки на лодку {{boat}}</h4>
+                <h4 class="my-0 font-weight-normal">Добавить свой продукт</h4>
             </div>
             <div class="card-body">
                 <form method="post" action="" class="form-floating" enctype="multipart/form-data">
                     <div class="mb-3">
 
                     {% csrf_token %}
-
-                     <input type="hidden" name="boat"   value ="{{ boat.pk }}">
-
                     {{form.as_p}}
 
 
